fixes research spacing 4

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -251,5 +251,6 @@ p.research-date {
 }
 
 .item {
-    max-width: 15%;
+    max-width: 75%;
+    margin: 0 auto;
 }
